# qt_photo_suit

./: .gitignore  CMakeLists.txt  FEATURES.md  PHASE2_NEXT20.md  PHASE3_NEXT10.md  PHASE4_NEXT8.md  PRODUCT_SUITE_FEATURES.md  README.md
src/: mainwindow.cpp  mainwindow.h  photolibrary.cpp  photolibrary.h
